# GLaBSD

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  Makefile  Vagrantfile  bochsrc.bxrc  bochsrc_debug.bxrc  codestyle.xml  linker.ld
boot/: boot.asm  make.config  multiboot.S
docker/: Dockerfile
drivers/: make.config  uart8250.c
includes/: boot.h  debugging.h  gdt.h  idt.h  kernel.h  logging.h  pic.h  screen.h  serial.h  string.h  types.h
includes/arch/: boot.h
includes/arch/mm/: frames.h  mmu.h  virt_allocator.h
includes/kernel/: logging.h
kernel/: Makefile
kernel/arch/i386/: arch.c  boot.S  gdt.c  i386.c  i386init.S  idt.c  io.c  keyboard.c  linker.ld  make.config  tty.c  vga.c
kernel/include/kernel/: arch.h  gdt.h  grub.h  i386.h  io.h  keyboard.h  tasks.h  tty.h  types.h  vga.h
kernel/kernel/: kernel.c
libc/: Makefile
libc/include/: stdio.h  string.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c  atoi.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strcpy.c  strlen.c
src/: boot.S  boot_utils.S  boot_utils.asm  gdt.c  kernel_init.asm  logging.c  main.c  make.config  memory_managment.c  multiboot.c  pic.c  screen.c  serial.c  string.c
src/arch/: boot_utils.asm  frames.c  gdt.c  idt.c  make.config  mmu.c  virt_allocator.c
src/boot/: boot.asm  make.config  multiboot.asm
src/drivers/: make.config  pic8259.c  uart8250.c  vga_text_mode.c
src/kernel/: main.c  make.config  memory_managment.c  multiboot.c  stage2.asm  string.c
